# TeaPicK

./: .gitignore  LICENSE  build.py  pyproject.toml
docs/: README.md  readme.md
src/: .gitignore
src/TeaPicK/: .gitignore  application.py
src/TeaPicK/GUI/: MainWindow.py  QTextEditLogHandler.py
src/TeaPicK/config/: Configs.toml  LogConfig.ini  courseList.json  sessionConfig.ini  userConfig.ini  websiteConfig.ini
src/TeaPicK/handlers/: LoginHandler.py
src/TeaPicK/manager/: LogManager.py  __init__.py
src/TeaPicK/managers/: LogManager.py
src/TeaPicK/models/: CourseModel.py  SessionModel.py  __init__.py
src/TeaPicK/module/: CourseModule.py  LoginModule.py  SelectModule.py
src/TeaPicK/modules/: CourseModule.py  LoginModule.py  SelectModule.py  __init__.py
src/TeaPicK/thread/: ControlThread.py  WorkerThread.py  __init__.py
src/TeaPicK/utils/: ConfigUtil.py  CourseIdUtil.py  SaltUtil.py  SessionUtil.py  __init__.py
src/TeaPicK/wrapper/: TimeWrapper.py
